// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> should render password changed 1`] = `
.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
}

.emotion-4 {
  padding-bottom: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-self: flex-start;
  color: #000000;
  font-weight: 500;
  background-color: #ffffff;
  border: 1px solid #4ac565;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-0 {
  width: 40px;
  height: 40px;
  color: #ffffff;
  background-color: #4ac565;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px;
  width: 446px;
  background-color: #2e2e2e;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  padding-top: 32px;
  padding-bottom: 32px;
}

.emotion-11 {
  padding-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 200px;
  min-width: 200px;
  max-width: 200px;
  background-color: #318AF5;
  padding: 2px;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-10:hover {
  background-color: #0053C4;
}

.emotion-10[aria-disabled=true] {
  opacity: 0.5;
  color: #ffffff;
  background-color: #318AF5;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 12px;
  background-color: #ffffff;
  border-radius: 2px;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 {
  padding: 8px;
}

.emotion-13 {
  padding: 12px;
}

.emotion-12 {
  height: 20px;
}

.emotion-18 {
  padding-top: 8px;
}

.emotion-15 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-17 {
  position: relative;
}

.emotion-16 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-16:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-23 {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-22 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #b3b3b3;
  padding: 12px;
  outline-offset: -2px;
}

.emotion-22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-22:hover {
  color: #73b61c;
}

.emotion-28 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-27 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-27:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-27[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-27,
.emotion-27:hover,
.emotion-27:visited {
  background-color: #73b61c;
}

.emotion-27:hover {
  background-color: #96c955;
}

.emotion-27[aria-disabled=true] {
  background-color: #808080;
}

.emotion-29 {
  padding-top: 32px;
  text-align: center;
}

.emotion-29 a {
  color: #808080;
}

<div
  className="emotion-31"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-0"
        >
          <svg
            data-file-name="checkmark.svg"
            width={20}
          />
        </div>
        <div
          className="emotion-1"
        >
          Password has been updated
        </div>
      </div>
    </div>
  </div>
  <form
    className="emotion-30"
    method="post"
    onSubmit={[Function]}
  >
    <svg
      className="emotion-5"
      data-file-name="logo.svg"
      width={143}
    />
    <h3
      className="emotion-6"
    >
      Welcome. Please login.
    </h3>
    <div
      className="emotion-11"
    >
      <button
        aria-label="Sign in with Google"
        className="emotion-10"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-7"
          >
            <svg
              data-file-name="google_logo.svg"
              height={20}
            />
          </div>
          <div
            className="emotion-8"
          >
            Sign in with Google
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-14"
    >
      <div
        className="emotion-13"
      >
        <div
          className="emotion-12"
        />
      </div>
    </div>
    <div
      className="emotion-18"
    >
      <label
        className="emotion-15"
        htmlFor="username"
      >
        Email
      </label>
      <div
        className="emotion-17"
      >
        <input
          autoFocus={true}
          className="emotion-16"
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-18"
      >
         
      </div>
    </div>
    <div
      className="emotion-18"
    >
      <label
        className="emotion-15"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="emotion-17"
      >
        <input
          className="emotion-16"
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <div
          className="emotion-23"
        >
          <button
            aria-label="Show password"
            className="emotion-22"
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="hidden.svg"
              width={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-18"
      >
         
      </div>
    </div>
    <div
      className="emotion-28"
    >
      <button
        aria-disabled={true}
        className="emotion-27"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
    </div>
    <div
      className="emotion-29"
    >
      <a
        href="/create-account"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Create an account
      </a>
      <br />
      <br />
      <a
        href="/reset-password"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Reset your password
      </a>
    </div>
  </form>
</div>
`;

exports[`<Login /> should render properly 1`] = `
.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
}

.emotion-4 {
  padding-bottom: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-self: flex-start;
  color: #000000;
  font-weight: 500;
  background-color: #ffffff;
  border: 1px solid #4ac565;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-0 {
  width: 40px;
  height: 40px;
  color: #ffffff;
  background-color: #4ac565;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px;
  width: 446px;
  background-color: #2e2e2e;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  padding-top: 32px;
  padding-bottom: 32px;
}

.emotion-11 {
  padding-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 200px;
  min-width: 200px;
  max-width: 200px;
  background-color: #318AF5;
  padding: 2px;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-10:hover {
  background-color: #0053C4;
}

.emotion-10[aria-disabled=true] {
  opacity: 0.5;
  color: #ffffff;
  background-color: #318AF5;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 12px;
  background-color: #ffffff;
  border-radius: 2px;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 {
  padding: 8px;
}

.emotion-13 {
  padding: 12px;
}

.emotion-12 {
  height: 20px;
}

.emotion-18 {
  padding-top: 8px;
}

.emotion-15 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-17 {
  position: relative;
}

.emotion-16 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-16:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-23 {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-22 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #b3b3b3;
  padding: 12px;
  outline-offset: -2px;
}

.emotion-22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-22:hover {
  color: #73b61c;
}

.emotion-28 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-27 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-27:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-27[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-27,
.emotion-27:hover,
.emotion-27:visited {
  background-color: #73b61c;
}

.emotion-27:hover {
  background-color: #96c955;
}

.emotion-27[aria-disabled=true] {
  background-color: #808080;
}

.emotion-29 {
  padding-top: 32px;
  text-align: center;
}

.emotion-29 a {
  color: #808080;
}

<div
  className="emotion-31"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-0"
        >
          <svg
            data-file-name="checkmark.svg"
            width={20}
          />
        </div>
        <div
          className="emotion-1"
        >
          Password Reset Email Sent
        </div>
      </div>
    </div>
  </div>
  <form
    className="emotion-30"
    method="post"
    onSubmit={[Function]}
  >
    <svg
      className="emotion-5"
      data-file-name="logo.svg"
      width={143}
    />
    <h3
      className="emotion-6"
    >
      Welcome. Please login.
    </h3>
    <div
      className="emotion-11"
    >
      <button
        aria-label="Sign in with Google"
        className="emotion-10"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-7"
          >
            <svg
              data-file-name="google_logo.svg"
              height={20}
            />
          </div>
          <div
            className="emotion-8"
          >
            Sign in with Google
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-14"
    >
      <div
        className="emotion-13"
      >
        <div
          className="emotion-12"
        />
      </div>
    </div>
    <div
      className="emotion-18"
    >
      <label
        className="emotion-15"
        htmlFor="username"
      >
        Email
      </label>
      <div
        className="emotion-17"
      >
        <input
          autoFocus={true}
          className="emotion-16"
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-18"
      >
         
      </div>
    </div>
    <div
      className="emotion-18"
    >
      <label
        className="emotion-15"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="emotion-17"
      >
        <input
          className="emotion-16"
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <div
          className="emotion-23"
        >
          <button
            aria-label="Show password"
            className="emotion-22"
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="hidden.svg"
              width={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-18"
      >
         
      </div>
    </div>
    <div
      className="emotion-28"
    >
      <button
        aria-disabled={true}
        className="emotion-27"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
    </div>
    <div
      className="emotion-29"
    >
      <a
        href="/create-account"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Create an account
      </a>
      <br />
      <br />
      <a
        href="/reset-password"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Reset your password
      </a>
    </div>
  </form>
</div>
`;

exports[`<Login /> should render properly on account activation success 1`] = `
.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
}

.emotion-4 {
  padding-bottom: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-self: flex-start;
  color: #000000;
  font-weight: 500;
  background-color: #ffffff;
  border: 1px solid #4ac565;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-0 {
  width: 40px;
  height: 40px;
  color: #ffffff;
  background-color: #4ac565;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px;
  width: 446px;
  background-color: #2e2e2e;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  padding-top: 32px;
  padding-bottom: 32px;
}

.emotion-11 {
  padding-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 200px;
  min-width: 200px;
  max-width: 200px;
  background-color: #318AF5;
  padding: 2px;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-10:hover {
  background-color: #0053C4;
}

.emotion-10[aria-disabled=true] {
  opacity: 0.5;
  color: #ffffff;
  background-color: #318AF5;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 12px;
  background-color: #ffffff;
  border-radius: 2px;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 {
  padding: 8px;
}

.emotion-13 {
  padding: 12px;
}

.emotion-12 {
  height: 20px;
}

.emotion-18 {
  padding-top: 8px;
}

.emotion-15 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-17 {
  position: relative;
}

.emotion-16 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-16:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-23 {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-22 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #b3b3b3;
  padding: 12px;
  outline-offset: -2px;
}

.emotion-22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-22:hover {
  color: #73b61c;
}

.emotion-28 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-27 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-27:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-27[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-27,
.emotion-27:hover,
.emotion-27:visited {
  background-color: #73b61c;
}

.emotion-27:hover {
  background-color: #96c955;
}

.emotion-27[aria-disabled=true] {
  background-color: #808080;
}

.emotion-29 {
  padding-top: 32px;
  text-align: center;
}

.emotion-29 a {
  color: #808080;
}

<div
  className="emotion-31"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-0"
        >
          <svg
            data-file-name="checkmark.svg"
            width={20}
          />
        </div>
        <div
          className="emotion-1"
        >
          Account activated, please login now
        </div>
      </div>
    </div>
  </div>
  <form
    className="emotion-30"
    method="post"
    onSubmit={[Function]}
  >
    <svg
      className="emotion-5"
      data-file-name="logo.svg"
      width={143}
    />
    <h3
      className="emotion-6"
    >
      Welcome. Please login.
    </h3>
    <div
      className="emotion-11"
    >
      <button
        aria-label="Sign in with Google"
        className="emotion-10"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-7"
          >
            <svg
              data-file-name="google_logo.svg"
              height={20}
            />
          </div>
          <div
            className="emotion-8"
          >
            Sign in with Google
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-14"
    >
      <div
        className="emotion-13"
      >
        <div
          className="emotion-12"
        />
      </div>
    </div>
    <div
      className="emotion-18"
    >
      <label
        className="emotion-15"
        htmlFor="username"
      >
        Email
      </label>
      <div
        className="emotion-17"
      >
        <input
          autoFocus={true}
          className="emotion-16"
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-18"
      >
         
      </div>
    </div>
    <div
      className="emotion-18"
    >
      <label
        className="emotion-15"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="emotion-17"
      >
        <input
          className="emotion-16"
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <div
          className="emotion-23"
        >
          <button
            aria-label="Show password"
            className="emotion-22"
            onClick={[Function]}
            type="button"
          >
            <svg
              data-file-name="hidden.svg"
              width={20}
            />
          </button>
        </div>
      </div>
      <div
        className="emotion-18"
      >
         
      </div>
    </div>
    <div
      className="emotion-28"
    >
      <button
        aria-disabled={true}
        className="emotion-27"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
    </div>
    <div
      className="emotion-29"
    >
      <a
        href="/create-account"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Create an account
      </a>
      <br />
      <br />
      <a
        href="/reset-password"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Reset your password
      </a>
    </div>
  </form>
</div>
`;
